Fixing logo's z-index on desktop

--- a/src/sass/layout/_desktop.scss
+++ b/src/sass/layout/_desktop.scss
@@ -52,6 +52,7 @@
     &__text {
       position: fixed;
       top: 55px;
+      z-index: 10;
     }
   }
 
